# fringemanager

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __main__.py  display.py  fringes.py  projector.py
