[project]
name = "fringemanager"
version = "0.1.0"
authors = [
    {name = "Daniel Weston"}
]

description = "TODO"
readme = "README.md"
requires-python = "=3.11.7"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "=3.11.7"
numpy = "==2.3.0"
pywin32 = ">=311,<312"
pillow = ">=12.0.0,<13.0.0"

[tool.poetry.scripts]
fringemanager = "src.__main__"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"